--- a/src/components/navBar/style.css
+++ b/src/components/navBar/style.css
@@ -7,19 +7,18 @@ ul {
   padding: 15px 0;
 }
 @media only screen and (min-width: 600px) {
-  button {
+  .nav-button {
     display: none;
   }
 }
 
 @media only screen and (max-width: 600px) {
-  button {
+  .nav-button {
     display: block;
   }
   ul {
     flex-direction: column;
     display: none;
   }
-
 }
 
