--- a/src/components/swiper/style.css
+++ b/src/components/swiper/style.css
@@ -1,6 +1,34 @@
-.swiper-pagination-bullet {
-  width: 16px; /* Width of the dash */
-  height: 2px; /* Height of the dash */
-  border-radius: 0; /* Remove border-radius to create a rectangular shape */
-  background: #000; /* Color of the dash */
+/* Target the bullets inside the swiper-pagination container */
+.swiper-pagination .swiper-pagination-bullet {
+  width: 30px;
+  height: 3px;
+  border-radius: 0;
+  background: transparent;
+  border: 1px solid #6e2525;
+  box-sizing: border-box;
+}
+
+/* For active bullet */
+.swiper-pagination .swiper-pagination-bullet-active {
+  background: white;
+  border: none;
+}
+
+.swiper-button-next:after,.swiper-button-prev:after{
+  color: WhiteSmoke;
+
+}
+
+.swiper-button-next:after{
+  position: absolute;
+  right: 40px;
+}
+.swiper-button-prev:after{
+  position: absolute;
+  left: 40px;
+}
+
+/* Directly targeting SVG path (if inline SVG is used) */
+.swiper-button-next svg path, .swiper-button-prev svg path {
+  fill: #ff0000; /* Change SVG color */
 }
